PDF: Add Chapter 2

--- a/PDF/my_folder/chapter2.tex
+++ b/PDF/my_folder/chapter2.tex
@@ -1,143 +1,199 @@
-\chapter{Название второй главы: разработка метода, алгоритма, модели исследования} \label{ch2}
+\chapter{Теоретический анализ легковесных криптографических алгоритмов} \label{ch2}
 	
 % не рекомендуется использовать отдельную section <<введение>> после лета 2020 года
 %\section{Введение} \label{ch2:intro}
 
-Глава посвящена более подробным примерам оформления текстово-графических объектов.
+В данной главе проводится теоретический анализ алгоритмов легковесной криптографии. Вводится их определение, требования к ним. Анализируются возможные подходы к защите от различных видов атак на устройства интернета вещей. Определяются виды алгоритмов, наиболее подходящие для реализации данных подходов, а также стандартные протоколы "общего назначения" для этой цели.
 
-В параграфе \ref{ch2:title-abbr} приведены примеры оформления многострочной формулы и одиночного рисунка. Параграф \ref{ch2:sec-abbr} раскрывает правила оформления перечислений и псевдокода. В параграфе \ref{ch2:sec-very-short-title} приведены примеры оформления сложносоставных рисунков, длинных таблиц, а также теоремоподобных окружений.
+\section{Легковесные алгоритмы: понятие, требования} \label{ch2:sec1}
 
+\subsection{Понятие и область применения легковесной криптографии} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-\section{Название параграфа} \label{ch2:title-abbr} %название по-русски
+Легковесная криптография (LW-криптография) изучает криптографические алгоритмы, ориентированные на использование в небольших вычислительных устройствах, заведомо не обладающих значительными ресурсами.
 
+LW-криптография используется для обеспечения безопасности встраиваемых систем (англ. embedded systems). Встраиваемая система представляет собой микроконтроллер или небольшой компьютер, встроенный в управляемое устройство. Таким устройством может быть станок с ЧПУ или платежный терминал. Данные, которыми оперирует такое устройство, как платежный терминал, представляют собой существенную ценность, поэтому нуждаются в защите. Однако возможна разработка вирусов и «широкого действия», не нацеленных на определенное устройство, но могущих нанести большой вред из-за широкой распространенности встраиваемых систем. Примером вируса такого типа является RFID-вирус \cite{src22}.
 
+Другим важным применением легковесной криптографии являются задачи обеспечения безопасности устройств интернета вещей. Этому варианту использования LW-криптография и посвящена данная работа.
 
-%%%%
-%%		
-%%  \input{...} commands are used only to sychronize some parts of the text with the author guide. Authors are free to type the text directly in .tex-files   
-%%  \input{...} комманды используются только, чтобы синхронизировать части текта с рекомендациями авторам. Авторы  вольны вносить текст непосредственно в файл главы  
-%%  
- \input{my_folder/tex/eq-Galois} % пример двух выравнивания двух формул в окружении align
+В интернете вещей LW-криптография применяется главным образом для обеспечения безопасности устройств сенсорного уровня. В то время как безопасность узлов сетевого/транспортного уровня можно организовать на основе модели криптомаршрутизатора \cite{src23}, а остальные компоненты сети IoT (клиентские приложения прикладного уровня, сервера уровней обработки и бизнес-логики) обладают достаточными ресурсами для применения методов общей криптографии.
 
+В контексте использования LW-криптографии в устройствах интернета вещей, эти устройства считаются «атомарными». Они только собирают данные, шифруют их и отправляют на узлы транспортного уровня. И защите подвергается главным образом отправляемый устройствами трафик. Среди основных направлений защиты пакетов данных можно выделить следующие.
+\begin{itemize}
+	\item Подтверждение достоверности и целостности пакета данных. Требуется уверенность в том, что пакет отправил законный отправитель, и по пути данные не подверглись модификации злоумышленником или помехам канала передачи.
+	\item Подтверждение подлинности пакета данных. Требуется уверенность в том, что пакет, который мы получаем, это именно тот пакет, который сейчас отправил законный отправитель. А не пакет, который он отправил ранее, а злоумышленник сейчас ретранслировал.
+	\item Обеспечение конфиденциальности пакета данных. Требуется уверенность в том, что злоумышленник не смог расшифровать данные, даже если перехватит пакет.
+\end{itemize}
 
-На \firef{fig:spbpu-new-bld-autumn-ch2} приведёна фотография Нового научно-исследовательского корпуса СПбПУ.
+Существенным фактором является \textit{неинтерактивность} трафика. Это означает, что пакет передается устройством лишь однократно, без долгих процедур аутентификации. Неинтерактивность обуславливается, во-первых, весьма вероятным отсутствием постоянного канала беспроводной связи, а во-вторых, необходимостью быстро передать пакет данных при наличии такого подключения. Неинтерактивность сильно ограничивает количество доступных для использования криптографических методов и протоколов.
 
-	\begin{figure}[ht] 
-	\center
-	\includegraphics [scale=0.27] {my_folder/images/spbpu_new_bld_autumn}
-	\caption{Новый научно-исследовательский корпус СПбПУ \cite{spbpu-gallery}} 
-	\label{fig:spbpu-new-bld-autumn-ch2}  
-	\end{figure}
-	
+Можно выделить следующие требования к легковесным криптографическим алгоритмам и их реализации.
+\begin{itemize}
+	\item Бизнес-требования:
+		\begin{itemize}
+			\item требуемый уровень безопасности устройства;
+			\item стоимость устройства;
+			\item итоговая производительность устройства.
+		\end{itemize}
+	\item Ограничения аппаратной части:
+		\begin{itemize}
+			\item ограничения энергетических ресурсов;
+			\item ограничения по объему ОЗУ;
+			\item ограничения размера микросхемы (GE-мера).
+		\end{itemize}
+	\item Ограничения программной реализации:
+		\begin{itemize}
+			\item объем программного кода;
+			\item количество потребляемой оперативной памяти;
+			\item время работы.
+		\end{itemize}
+	\item Возможные дополнительные ограничения:
+		\begin{itemize}
+			\item ширина полосы рабочих частот и пропускная способность канала связи.
+		\end{itemize}
+\end{itemize}
 
+\subsection{Бизнес-требования} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-	
-\section{Название параграфа} \label{ch2:sec-abbr} %название по-русски
-	
-Название параграфа оформляется с помощью команды \verb|\section{...}|, название главы --- \verb|\chapter{...}|. 
-	
+Бизнес-требования определяют необходимость поиска компромисса между стоимостью, безопасностью и производительностью устройства. Достаточно легко оптимизировать два из трех свойств, а вот оптимизировать все три – обычно весьма трудная задача для разработчиков.
 
-\subsection{Название подпараграфа} \label{ch2:subsec-title-abbr} %название по-русски
+Процедура определения требуемого уровня безопасности определяется в соответствии с конкретной областью применения конкретной системы. В коммерческих структурах может использоваться, например, модель системы безопасности \textit{с полным перекрытием}.  В рамках данной модели перечисляются все защищаемые объекты системы и возможные атаки на них, а также вероятность появления и наносимый ущерб для каждой из атак. После чего определяются приоритетные направления защиты. В контексте систем интернета вещей представляется разумным ввести атаки, общие для всех уровней системы (например, DoS-атаки) и атаки, специфичные для конкретного слоя (например, кодовые инъекции нацелены главным образом на прикладной уровень). Атаки на каждый уровень и меры защиты от них кратко приведены в первой главе данной работы.
 
+Стоимость и итоговая производительность устройства определяется, главным образом, используется ли в этом качестве устройство «общего назначения» (например, смартфон) или же некоторое «кастомное», уникальное аппаратное решение.
 
-Название подпараграфа оформляется с помощью команды  \texttt{\textbackslash{}subsection\{...\}}.
+В первом случае и процессор, и системы сетевого взаимодействия, и иногда даже системы безопасности уже реализованы, и требуется реализовать только модули для сбора данных и для их шифрования. Обратной стороной являются возможные скрытые уязвимости или сознательно добавленные «бэкдоры» устройства, которые крайне трудно обнаружить. Кроме этого, использование функционала «из коробки» означает необходимость положиться на разработчиков этого функционала и потерю полного контроля над аппаратным обеспечением.
 
+Во втором случае разработка начинается «с нуля» (или почти с нуля). С одной стороны, это требует гораздо больших навыков от команды разработчиков и больших затрат времени и денежных средств на разработку. Однако, с другой стороны, это может позволить создать в итоге более дешевое и надежное устройство – опять же в зависимости от уровня компетенций команды.
 
-%\subsubsection{Название подподпараграфа} \label{ch2:subsubsec-title-abbr} %название по-русски
-	
-Использование подподпараграфов в основной части крайне не рекомендуется. В случае использования, необходимо вынести данный номер в содержание.	
-Название подпараграфа оформляется с помощью команды  \texttt{\textbackslash{}subsubsecti\-on\{...\}}.
+\subsection{Требования к аппаратной части} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
+В случае использования «кастомной» аппаратной реализации, аппаратная часть должна удовлетворять требованиям по количеству энергетических ресурсов, объему ОЗУ и площади микросхемы. При использовании аппаратного решения «общего назначения» количество имеющихся ресурсов обычно значительно больше, чем требуется для работы криптографических алгоритмов (но, естественно, тоже ограниченно, что необходимо учитывать).
 
+Ограничения энергетических ресурсов могут явно задаваться конкретным технологическим решением (например, RFID-метки рассчитаны не более чем на 15 микроватт \cite{src24}). Кроме того, для предупреждения \textit{атак по энергетическим ресурсам} требуется по возможности уменьшить скачки в энергопотреблении устройства. Это отдельная тема, выходящая за рамки данной работы.
 
-\input{my_folder/tex/enumeration} % правила использования перечислений	
+Ограничения размера (площади) микросхемы связаны с тем, что зачастую в слабых устройствах (в том числе в устройствах интернета вещей) используются «кастомные» аппаратные решения, направленные на удешевление и повышение надежности устройств. Это означает, что требуется, насколько возможно, уменьшить количество используемых функциональных элементов. Оно определяется, во-первых, используемым алгоритмом, а во-вторых, его программной и аппаратной реализацией. В качестве единицы измерения данного ресурса используется количество элементов NAND (Not And), необходимое для реализации. Обозначается эта величина GE (logic Gate Elements number, количество логических вентилей). Существуют следующие категории реализаций алгоритмов \cite{src25}:
+\begin{itemize}
+	\item легковесные реализации (lightweight) – не более 3000 GE;
+	\item низкостоимостные реализации (low-cost) –не более 2000 GE;
+	\item ультралегкие реализации (ultra-lightweight) – не более 1000 GE.
+\end{itemize}
 
-	
-Оформление псевдокода необходимо осуществлять с помощью пакета \verb|algorithm2e| в окружении \verb|algorithm|. Данное окружение интерпретируется в шаблоне как рисунок. Пример оформления псевдокода алгоритма приведён на \firef{alg:AlgoFDSCALING}. 
-	
-	
-\input{my_folder/tex/pseudocode-agl-DTestsFDScaling} % пример оформления псевдокода алгоритма 	
+При создании конкретной аппаратной реализации необходимо искать баланс между скоростью работы и размером микросхемы. Оптимизация размера микросхемы достигается за счет использования последовательной архитектуры (обрабатывающей информацию побайтно), оптимизация скорости – за счет распараллеливания и конвейеризации, что влечет увеличение размера.
 
-	
-\section{Название параграфа} \label{ch2:sec-very-short-title} %название по-русски
+Основной стандартом, определяющим количество доступных ресурсов для легковесных криптографических алгоритмов, является \cite{src26}.
 
+\subsection{Требования к программной части} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-	
-\input{my_folder/tex/eq-equation-multilined} % пример оформления одиночной формулы в несколько строк
+При разработке программной реализации алгоритма необходимо оптимизировать те же направления, что при разработке любого ПО: оптимизация потребления памяти и времени, а также специфичный для данной области параметр – объем кода.
 
-\input{my_folder/tex/fig-spbpu-sc-four-in-one} % пример подключения 4х иллюстраций в одном рисунке
+Количество потребляемой памяти особенно критично для «кастомных» реализаций, при использовании более мощной аппаратной части уже не столь критично, хотя все равно подлежит оптимизации.
 
-%\input{my_folder/tex/fig-spbpu-whitehall-three-in-one} % пример подключения 3х иллюстрации в одном рисунке
-%
-%\input{my_folder/tex/fig-spbpu-main-bld-two-in-one} % пример подключения 2х иллюстраций в одном рисунке
+Время работы состоит из двух величин. Задержка (англ. latency) – время инициализации алгоритма, и пропускная способность (англ. throughput) – количество информации, обрабатываемой в единицу времени. Обычно требования по каждому из этих параметров формулируются отдельно. Например, для систем автоматического осуществления дорожных сборов время реакции устройства должно быть менее 10 миллисекунд \cite{src27}, это ограничение на задержку. С другой стороны, если система должна еще и зафиксировать изображение машины, нарушившей ПДД, то требуется передать (а значит, зашифровать) достаточно большое количество информации, а это требует относительно большой пропускной способности.
 
-\input{my_folder/tex/tab-more-than-one-page} % пример подключения таблицы на несколько страциц
+Объем программного кода тесно связан с количеством используемого кода. Так, S-блоки, определяющие порядок перестановки блочного шифра, можно хранить в оперативной памяти, а можно напрямую «зашить» в код. Второй способ быстрее, однако исполнение кода тоже требует определенных накладных расходов (при исполнении код также хранится в ОЗУ). Поэтому конкретное соотношение хранимых в ОЗУ и заданных в коде данных определяется под конкретный сценарий использования.
 
+\section{Использование криптографических методов в легковесной криптографии} \label{ch2:sec2}
 
-\begin{table} [htbp]% Пример оформления таблицы
-	\centering\small
-	\caption{Пример представления данных для сквозного примера по ВКР \cite{Peskov2004}}%
-	\label{tab:ToyCompare}		
-		\begin{tabular}{|l|l|l|l|l|l|}
-			\hline
-			$G$&$m_1$&$m_2$&$m_3$&$m_4$&$K$\\
-			\hline
-			$g_1$&0&1&1&0&1\\ \hline
-			$g_2$&1&2&0&1&1\\ \hline
-			$g_3$&0&1&0&1&1\\ \hline
-			$g_4$&1&2&1&0&2\\ \hline
-			$g_5$&1&1&0&1&2\\ \hline
-			$g_6$&1&1&1&2&2\\ \hline		
-		\end{tabular}
-%	\caption*{\raggedright\hspace*{2.5em} Составлено (или/и рассчитано) по \cite{Peskov2004}} %Если проведена авторская обработка или расчеты по какому-либо источнику	
-	\normalsize% возвращаем шрифт к нормальному
-\end{table}
+Как указывалось выше, для защиты трафика устройств IoT необходимо решить следующие задачи:
+\begin{itemize}
+	\item подтверждение достоверности и целостности пакета данных;
+	\item подтверждение подлинности пакета данных;
+	\item обеспечение конфиденциальности пакета данных.
+\end{itemize}
 
+Проанализируем основные типы криптографических алгоритмов на пригодность для решения этих задач.
 
+\subsection{Подтверждение достоверности и целостности пакета}
 
-%% please, before using, read the author guide carefully
+Фактически эта задача является задачей аутентификации. Она распадается на две части: аутентификация отправителя и аутентификация пакета.
 
-\input{my_folder/tex/tab-toy-context-minipage} % пример подключения minipage
+В системах обмена пакетами общего назначения (не «легковесных») обычно используются протоколы аутентификации отправителя. В начале общения с помощью одного из протоколов (CHAP, Kerberos и другие) подтверждается подлинность отправителя или обеих сторон. После чего начинается доверенный обмен сообщениями. Спустя некоторое время требуется повторная аутентификация. Такая схема используется на следующих уровнях модели OSI: канальный (например, протоколы EAP, PPP), сеансовый (PAP) и прикладной (SSH).
 
-\input{my_folder/tex/fig-spbpu-new-bld-autumn-minipage} % пример подключения minipage
+Для использования в системах IoT такой метод не слишком подходит, так как пакеты могут отправляться через краткие, длительные или неравные промежутки времени. При этом каждый пакет может быть отправлен или модифицирован злоумышленником. Это обстоятельство диктует необходимость подтверждения достоверности и целостности каждого передаваемого пакета данных. Это позволяет распознать факт введения фальшивого узла.
 
+Аутентификация также может производиться с использованием таких инструментов, как хешированный или нехешированный пароль, а также электронная цифровая подпись (ЭЦП). Эти методы подходят для легковесной криптографии.
 
+ЭЦП применяется следующим образом. Имеется закрытый ключ, он хранится на отправляющем устройстве, и открытый ключ, он хранится на принимающем устройстве и сопоставлен отправляющему устройству. Открытый ключ однозначно вычисляется по закрытому.
+\begin{enumerate}
+	\item Вычислить контрольную сумму (хэш) пакета данных.
+	\item Подписать хэш ЭЦП (т. е. зашифровать хэш закрытым ключом, получив в результате подпись).
+	\item Отправить пакет данных, снабдив ЭЦП. Принимающая сторона расшифровывает ЭЦП с помощью открытого ключа. Если получился верный хэш документа, значит хэш был зашифрован с помощью верного закрытого ключа, что подтверждает законность отправителя.
+\end{enumerate} 
 
+Закрытый ключ известен только отправляющему устройству. Злоумышленник его не знает и, следовательно, правильно зашифровать хэш не сможет.
 
-\input{my_folder/tex/rules-theorem-like-expressions} 
+Цифровая подпись, в отличие от пароля, еще и гарантирует целостность доставленного сообщения (защита от случайных или намеренных искажений по пути). Поэтому она является более предпочтительной, хотя и требует бОльших расходов времени, т. к. требуется предварительно вычислить хэш сообщения (зависит от длины сообщения, т. е. влияет на пропускную способность). Шифрование хэша требует уже фиксированного времени (т. е. влияет только на задержку).
 
-По аналогии с нумерацией формул, рисунков и таблиц нумеруются и иные текстово-графические объекты, то есть включаем в нумерацию номер главы, например: теорема 3.1. для первой теоремы третьей главы монографии. Команды \LaTeX{} выставляют нумерацию и форматирование автоматически. Полный перечень команд для подготовки текстово-графических и иных объектов находится в подробных методических рекомендациях \cite{spbpu-bci-template-author-guide}. 
+\subsection{Подтверждение подлинности пакета}
 
+Такое подтверждение необходимо для защиты от атаки повторного воспроизведения. В существующих системах представлены различные способы обеспечения такой защиты.
 
-\input{my_folder/tex/rules-list-of-environments} % список некоторых окружений
+Один из способов реализован в протоколе Kerberos \cite{src28}.  Сообщение снабжается сроком действия и временной меткой. Если срок действия истек, можно соответствующим образом отреагировать: отбросить пакет, зафиксировать подозрительную активность или даже заблокировать трафик от скомпрометированного отправителя.
 
+Схожий подход под названием Hop-by-hop transport \cite{src29} используется в IPv4/IPv6 маршрутизации. Заголовок пакета (IP-заголовок) содержит специальное восьмиразрядное поле, в IPv4 оно называется TTL (Time to live), в IPv6 – Hop Limit. Это поле содержит максимальное количество прыжков (передач пакета между маршрутизаторами), и после каждого прохождения через маршрутизатор оно уменьшается на единицу. Если оно достигает нуля, пакет считается устаревшим и отбрасывается.
 
-\input{my_folder/tex/theorem-example} %пример оформления теоремы
+Другим возможным подходом является добавление так называемой «nonce-вставки». Nonce-вставка (от англ. number that can be used only once) – случайно сгенерированное число, известное обеим сторонам и хранимое ими в тайне. Генерируется сервером, отправляется клиенту, который затем добавляет его к паролю при шифровании. Используется однократно, после чего меняется. Повторение или использование неверной nonce-вставки говорит о том, что пакет отправлен злоумышленником. Не подходит по причине неинтерактивности трафика, передаваемого устройствами IoT (устройство не ждет сигнала сервера, вся коммуникация состоит в одном пакете).
 
+Таким образом, оптимальным вариантом является добавление к зашифрованному сообщению метки времени. Эта операция не является требовательной ни по времени, ни по памяти. Но необходимо наличие системного таймера. При этом исходим из того, что злоумышленник не сможет расшифровать сообщение, а значит и изменить метку не может. Кроме того, метку можно подписать цифровой подписью. Тогда злоумышленник не сможет ее изменить даже в случае, если сможет прочитать данные.
 
-\input{my_folder/tex/definition-example} %пример оформления определения
+\subsection{Обеспечение конфиденциальности пакета}
 
+Эта задача является одной из важнейших и наиболее сложных задач, которые необходимо решить при организации защиты данных, передаваемых IoT-устройствами. Данная задача является основным объектом изучения легковесной криптографии.
 
-Вместо теоремо-подобных окружений для вставки небольших текстово-графических объектов иногда используются команды. Типичным примером такого подхода является команда \verb|\footnote{text}|\footnote{Внимание! Команда вставляется непосредственно после слова, куда вставляется сноска (без пробела). Лишние пробелы также не указываются внутри команды перед и после фигурных скобок.}, где в аргументе \verb|text| указывают текст \textit{подстрочной ссылки (сноски)}.В них \textit{нельзя добавлять веб-ссылки или цитировать литературу}. Для этих целей используется список литературы. Нумерация сносок сквозная по ВКР без точки на конце выставляется в шаблоне автоматически, однако в каждом приложении к ВКР нумерация, зависящая от номера приложения, выставляется префикс <<П>>, например <<П1.1>> --- первая сноска первого приложения. 
+Итак, задача состоит в шифровании пакета данных. Ясно, что шифрование должно быть обратимым преобразованием. Принимающая сторона должна иметь возможность эффективно (достаточно быстро) расшифровать пришедший пакет данных. Как указывалось выше, требования к скорости работы определяются задержкой (определяется минимальным интервалом между сообщениями) и пропускной способностью (объем данных в пакете, который должен быть зашифрован до начала шифрования следующего пакета). Шифратор не должен потреблять больше доступного количества оперативной памяти, должен тратить как можно меньшее количество энергии (либо энергопотребление должно быть в пределах возможностей устройства, но близким к постоянному, чтобы затруднить криптоанализ по колебаниям энергопотребления). При этом следует помнить о необходимости минимизации требуемого размера микросхемы (хотя бы не более 3000 GE, в идеале – не более 1000 GE) и обеспечении максимального уровня стойкости шифрования.
 
+Таким образом, задача формулируется следующим образом. Какие алгоритмы позволяют достичь максимального уровня производительности и стойкости, требуя при этом а) не более 3000 GE и б) не более 1000 GE?
 
+При выборе способа шифрования в первую очередь следует проверить, не могут ли подойти известные криптоалгоритмы общего назначения. Если удастся, не изменяя сами алгоритмы, выполнить их программную и аппаратную реализацию, работающую в заданных условиях, это будет наилучшим вариантом. Потому что они уже хорошо исследованы, что позволяет рассчитывать на их стойкость.
 
+Следующим шагом должно быть рассмотрение известных (в том числе закрепленных в стандартах, о них ниже) легковесных криптоалгоритмов. И только если и они не подходят, можно попробовать модифицировать их в сторону ослабления и дальнейшего облегчения. Впрочем, это весьма рискованный путь, так как требует от создателей значительных навыков в криптоанализе, чтобы гарантировать стойкость шифра.
 
-%\FloatBarrier % заставить рисунки и другие подвижные (float) элементы остановиться
+Итак, ниже будут рассмотрены на пригодность для легковесного шифрования различные типы шифров общего назначения и легковесных шифров.
 
+\subsubsection{Блочное шифрование}
 
-\section{Выводы} \label{ch2:conclusion}
+В дело исследования блочных легковесных шифров внесли значительный вклад работы \cite{src30} \cite{src27}. Легковесные блочные шифры являются одним из наиболее динамично развивающихся разделов низкоресурсной криптографии. Исследования идут по двум направлениям: создание оптимальных реализаций алгоритмов общего назначения и создание новых алгоритмов, нацеленных именно на использование в низкоресурсных устройствах.
 
-Текст заключения ко второй главе. Пример ссылок \cite{Article,Book,Booklet,Conference,Inbook,Incollection,Manual,Mastersthesis,Misc,Phdthesis,Proceedings,Techreport,Unpublished,badiou:briefings}, а также ссылок с указанием страниц, на котором отображены те или иные текстово-графические объекты  \cite[с.~96]{Naidenova2017} или в виде мультицитаты на несколько источников \cites[с.~96]{Naidenova2017}[с.~46]{Ganter1999}. Часть библиографических записей носит иллюстративный характер и не имеет отношения к реальной литературе. 
+\paragraph{Криптоалгоритмы общего назначения}. \newline
 
-Короткое имя каждого библиографического источника содержится в специальном файле \verb|my_biblio.bib|, расположенном в папке \verb|my_folder|. Там же находятся исходные данные, которые с помощью программы \texttt{Biber} и стилевого файла \texttt{Biblatex-GOST} \cite{ctan-biblatex-gost} приведены в списке использованных источников согласно ГОСТ 7.0.5-2008.
-Многообразные реальные примеры исходных библиографических данных можно посмотреть по ссылке \cite{ctan-biblatex-gost-examples}.
+Одним из лучших на данный момент блочных шифров является алгоритм \textbf{AES} (Rijndael). Он оперирует 128-битными блоками данных и 128-, 192- и 256-битными ключами, производя 10, 12 и 14 раундов шифрования соответственно.
 
-Как правило, ВКР должна состоять из четырех глав. Оставшиеся главы можно создать по образцу первых двух и подключить с помощью команды \verb|\input| к исходному коду ВКР. Далее в приложении \ref{appendix-MikTeX-TexStudio} приведены краткие инструкции запуска исходного кода ВКР \cite{latex-miktex,latex-texstudio}.
+Помимо высокой криптостойкости, он является весьма производительным. Существует его программная реализация с производительностью порядка 7 процессорных тактов на байт \cite{src31} на стандартных ЦП. Добавление специальной процессорной инструкции для этого алгоритма позволило достичь производительности примерно 0.7 тактов на байт \cite{src32}.  Помимо этого, стоит отметить низкое потребление памяти.
 
-В приложении \ref{appendix-extra-examples} приведено подключение некоторых текстово-графических объектов. Они оформляются по приведенным ранее правилам. В качестве номера структурного элемента вместо номера главы используется <<П>> с номером главы. Текстово-графические объекты из приложений не учитываются в реферате.
+Он, однако, требует достаточно большого размера микросхемы, порядка 250 000 GE  для достижения максимальной скорости (до 70 Гб/сек) \cite{src33}. Наиболее компактная последовательная реализация требует 2400 GE  и имеет производительность 226 циклов на блок \cite{src34}. Это значительно лучше, и может подойти для многих устройств, даже очень простых. Тем не менее, «ультралегким» алгоритмом, т. е. оптимальная реализация которого требует менее 1000 GE, его все-таки назвать нельзя.
 
+\textbf{DES}. Данный алгоритм также является весьма известным. Длина его ключа значительно меньше, чем у AES (56 бит), что означает меньшую стойкость. Также он был взломан методом линейного криптоанализа \cite{src35}. В системах общего назначения (не легковесных) он применяется, в основном, в виде Triple DES, то есть троекратное шифрование с тремя ключами. Также существует вариация DESX, работающая с 184-битным ключом при таком же размере блока и числе раундов, как у DES. Наиболее компактные реализации DES и DESX требуют 2309 GE и 1848 GE соответственно \cite{src36}.
 
+\paragraph{Легковесные криптоалгоритмы}. \newline
+
+Наилучшие лешковесные блочные алгоритмы включены в стандарт \cite{src26} (часть 2, Block ciphers). Это шифры PRESENT и CLEFIA.
+
+\textbf{CLEFIA}. Данный алгоритм является очень популярным благодаря существующим очень производительным реализациям. Он оперирует 128-битными блоками с длиной ключа 128, 192 и 256 бит с 18, 22 и 26 раундами, соответственно. Наиболее компактная реализация шифрования требует 2488GE, дешифровки – 2604GE \cite{src37}. В данной реализации используется технология Clock Gating. С точки зрения криптоанализа данная функция является весьма стойкой, существующие не вероятностные атаки лишь немногим лучше, чем полный перебор \cite{src38}.
+
+\textbf{PRESENT}. Данный шифр использует 80- и 128-битные ключи для шифрования данных 64-битными блоками в 31 раунд. Он, вообще говоря, не совсем укладывается в границу, т. к. требует 1030 GE \cite{src39}. Но даже такой результат явился почти революционным. Его удалось достичь за счет последовательной архитектуры – это первый шифр с такой архитектурой. Еще одним улучшением является уменьшение числа S-боксов с 8 (обычное количество для блочных шифров) до 1.
+
+Платой за компактность данного алгоритма является не слишком высокая криптостойкость. Существуют атаки по сторонним каналам \cite{src40} \cite{src41} и атака на связанных ключах \cite{src42} на 17-раундовую версию данного алгоритма. Существует атака методом DFA (differential fault cryptanalysis) \cite{src43}. Есть дифференциальная атака на 26-раундовую версию \cite{src44}.
+
+Существуют и еще более компактные шифры. Это Katan (800-1000GE \cite{src45}), Ktantan (460GE-690GE \cite{src45}) и другие. Однако такие реализации оперируют ключами очень небольшой длины (32 или 48 бит), что позволяет взломать их простым перебором, либо они уязвимы для других атак. Такие алгоритмы подходят для шифрования не слишком важной информации.
+
+\subsubsection{Потоковое шифрование}
+
+Данное направление легковесной криптографии развито слабее, чем блочное шифрование. Основная причина в том, что потоковые шифры направлены главным образом на шифрование больших объемов информации сразу, в то время как легковесные устройства зачастую оперируют пакетами данных небольшого объема. Потоковые шифры часто имеют большое время инициализации и требуют большого количества памяти для хранения внутреннего состояния.
+
+В стандарт \cite{src26} (часть 3, Stream ciphers) включены два алгоритма. Это \textbf{Enoroco} и \textbf{Trivium}. Помимо закрытого ключа, эти алгоритмы используют также вектор инициализации, являющийся открытым ключом. Они требуют примерно 4900 \cite{src46} и 1300 \cite{src47} тактов процессора на инициализацию, соответственно. Занимаемое место на микросхеме – 4100GE и 2600GE \cite{src48}.
+
+Алгоритм Trivium является весьма гибким: можно варьировать соотношение между числом логических элементов (GE) и скоростью работы. Наиболее компактная реализация занимает всего 700GE \cite{src49}. К настоящему времени не известно атак быстрее полного перебора.
+
+\subsubsection{Асимметричное шифрование. Хэширование и ЭЦП}
+
+Асимметричное шифрование не слишком подходит для шифрования трафика, передаваемого устройствами интернета вещей. Среди их недостатков выделяется бОльшая длина ключа (\cite{src50}, стр 673), более низкая скорость шифрования, бОльшие вычислительные ресурсы. В то же время их преимущества (нет необходимости передачи секретного ключа, ключ дешифрования может хранить только одна сторона) диктуют область их применения главным образом как средство распределения систем или аутентификации. Их использование в системах ЭЦП описано выше.
+
+Впрочем, существуют достаточно эффективные реализации асимметричных алгоритмов, которые можно использовать при создании ЭЦП. Например, алгоритм cryptoGPS (GPS – по фамилиям авторов) имеет реализацию, требующую 724 такта (на все шифрование) при размере схемы 2876GE \cite{src51}. По стойкости она соответствует 80-битному симметричному ключу.
+
+Криптографическое хэширование однозначно не подходит для целей шифрования, так как является односторонним преобразованием: расшифровка хэша априори невозможна, возможно только сравнение хэшей. Впрочем, блочная шифрующая функция может быть интересна с криптографической точки зрения, и может быть использована как примитив при создании нового шифра, в том числе легковесного. Например, на базе алгоритма Present создана легковесная хэш-функция H-Present-128 \cite{src52}.
+
+Электронная цифровая подпись также не подходит для хэширования, так как использует в своем составе хэш. ЭЦП предназначены для гарантирования достоверности и целостности данных. В этом качестве она вполне может быть использована, о чем написано выше.
+
+\newpage
 
 %% Вспомогательные команды - Additional commands
 %
