--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -186,7 +186,6 @@
 	hyphenation  = { russian }
 }
 
-
 @article{src20,
 	author  = { Muhammad Burhan and Rana Asif Rehman and Byung-Seo Kim and Bilal Khan }, 
 	title   = { IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey },
@@ -204,6 +203,296 @@
 	title = {Weaponizing Wireless Networks: An Attack Tool for Launching Attacks against Sensor Networks},
 	hyphenation  = { english }
 }
+
+% Chapter 2
+
+@Online{src22,
+	title= { RFID Viruses and Worms },
+	url =          { http://www.rfidvirus.org/ },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@BOOK{src23,
+	author    = { Олег Николаевич Жданов and Вячеслав Владимирович Золотарев }, 
+	title     = { Методы и средства криптографической защиты информации: Учебное пособие },
+	publisher = { СибГАУ },
+	year      = { 2007 },
+	address   = { Красноярск },
+	pagetotal = { 217 },
+	hyphenation  = { russian }
+}
+
+@techreport{src24,
+	type = {Standard},
+	key = { ISO/IEC 18000-3:2004 },
+	year = {2004},
+	title = { Information technology - Radio frequency identification for item management – Part 3: Parameters for air interface communications at 13.56 MHz },
+	hyphenation = {english}
+}
+
+@conference{src25,
+	author    = { C. Manifavas and G. Hatzivasilis and K. Fysarakis and K. Rantos }, 
+	title     = { Lightweight Cryptography for Embedded Systems -- A Comparative Analysis },
+	year = {2013},
+	organization = {SETOP},
+	hyphenation  = { english }
+}
+
+@techreport{src26,
+	type = {Standard},
+	key = { ISO/ IEC FDIS 29192 },
+	year = {2012},
+	title = { Information technology – Security techniques – Lightweight cryptography },
+	hyphenation = {english}
+}
+
+@ARTICLE{src27,
+	author   = { Алексей Евгеньевич Жуков },
+	title    = { Легковесная криптография },
+	journal  = { Вопросы кибербезопасности },
+	year     = { 2015 },
+	number   = { 1 },
+	hyphenation = {russian}
+}
+
+@Online{src28,
+	title= { Как Kerberos защищает от атак с повторением пакетов },
+	url =          { https://www.osp.ru/winitpro/2014/03/13039728/ },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@article{src29,
+	author = { Simon Heimlicher and Pavan Nuggehalli and Martin May },
+	year = {2007},
+	month = {12},
+	pages = {59-60},
+	title = {End-to-end vs. hop-by-hop transport},
+	volume = {35},
+	journal = {SIGMETRICS Performance Evaluation Review},
+	doi = {10.1145/1328690.1328716},
+	hyphenation =     {english}
+}
+
+@article{src30,
+	author = { George Hatzivasilis and Konstantinos Fysarakis and Ioannis Papaefstathiou and Harry Manifavas },
+	year = {2017},
+	month = {04},
+	pages = {1-44},
+	title = {A review of lightweight block ciphers},
+	volume = {8},
+	journal = {Journal of Cryptographic Engineering},
+	doi = {10.1007/s13389-017-0160-y},
+	hyphenation =     {english}
+}
+
+@conference{src31,
+	author    = { Emilia Käsper and Peter Schwabe }, 
+	title     = { Faster and Timing-Attack Resistant AES-GCM },
+	year = {2009},
+	organization = {CHES},
+  	pages        = {1-17},
+  	hyphenation  = { english }
+}
+
+@conference{src32,
+	author    = { B. Preneel }, 
+	title     = { Perspectives on Lightweight Cryptography },
+	year = {2010},
+	organization = {Inscript},
+	pages        = {1-17},
+  	hyphenation  = { english }
+}
+
+@conference{src33,
+	author    = { A. Hodjat and I. Verbauwhede }, 
+	title     = { Minimum Area Cost for a 30 to 70 Gbits/s AES Processor },
+	year = {2004},
+	organization = {In IEEE Computer Society Annual Symposium on VLSI (ISVLSI)},
+	pages        = {498–502},
+	hyphenation  = { english }
+}
+
+@conference{src34,
+	author    = { A. Moradi and A. Poschmann and S. Ling and C. Paar and H. Wang }, 
+	title     = { Pushing the Limits: A Very Compact and a Threshold Implementation of AES },
+	year = {2011},
+	organization = {EUROCRYPT },
+	pages        = {69-88},
+	hyphenation  = { english }
+}
+
+@conference{src35,
+	author    = { P. Junod }, 
+	title     = { On the Complexity of Matsui’s Attack, Selected Areas in Cryptography },
+	year = {2001},
+	organization = {SAC},
+	pages        = {199-211},
+	hyphenation  = { english }
+}
+
+@conference{src36,
+	author    = { G. Leander and C. Paar and A. Poschmann and K. Schramm }, 
+	title     = { New Lightweight DES Variants },
+	year = { 2007 },
+	organization = {Fast Software Encryption (FSE)},
+	pages        = {196-210},
+	hyphenation  = { english }
+}
+
+@conference{src37,
+	author    = { Toru Akishita and Harunaga Hiwatari }, 
+	title     = { Very Compact Hardware Implementations of the Blockcipher CLEFIA },
+	year = { 2011 },
+	organization = {Selected Areas in Cryptography (SAC)},
+	pages        = {278-292},
+	hyphenation  = { english }
+}
+
+@conference{src38,
+	author    = { C. Texcan }, 
+	title     = { The Improbable Differential Attack: Cryptanalysis of Reduced Round CLEFIA },
+	year = { 2010 },
+	organization = {INDOCRYPT},
+	pages        = {197-209},
+	hyphenation  = { english }
+}
+
+@conference{src39,
+	author    = { C. Rolfes and A. Poschmann and G. Leander and C. Paar }, 
+	title     = { Ultra-lightweight implementations for smart devicessecurity for 1000 gate equivalents },
+	year = { 2008 },
+	organization = { Smart Card Research and Advanced Applications, LNCS },
+	pages        = {89-103},
+	hyphenation  = { english }
+}
+
+@conference{src40,
+	author    = { M. Renauld and F.-X. Standaert }, 
+	title     = { Algebraic side-channel attacks },
+	year = { 2009 },
+	organization = { IACR Cryptology ePrint Archive },
+	pages        = {279},
+	hyphenation  = { english }
+}
+
+@conference{src41,
+	author    = { L. Yang and M. Wang and S. Qiao }, 
+	title     = { Side channel cube attack on PRESENT },
+	year = { 2009 },
+	organization = { Cryptology and Network Security (CANS), LNCS },
+	pages        = {379-391},
+	hyphenation  = { english }
+}
+
+@conference{src42,
+	author    = { O. Ozen and K. Varici and C. Tezcan and C. Kocair }, 
+	title     = { Lightweight Block Ciphers Revisited: Cryptanalysis of Reduced Round PRESENT and HIGHT },
+	year = { 2009 },
+	organization = { Information Security and Privacy, LNCS },
+	pages        = {90-107},
+	hyphenation  = { english }
+}
+
+@conference{src43,
+	author    = { K. Jeong and Y. Lee and J. Sung and S. Hong }, 
+	title     = { Improved differential fault analysis on PRESENT-80/128 },
+	year = { 2013 },
+	organization = { International Journal of Computer Mathematics },
+	pages        = {2553-2563},
+	hyphenation  = { english }
+}
+
+@conference{src44,
+	author    = { C. Blondeau and K. Nyberg }, 
+	title     = { Links between truncated differential and multidimensional linear properties of block ciphers and underlying attack complexities },
+	year = { 2014 },
+	organization = { EUROCRYPT },
+	pages        = {165-182},
+	hyphenation  = { english }
+}
+
+@CONFERENCE{src45,
+	author       = { Christophe Cannière and Orr Dunkelman and Miroslav Knežević }, 
+	title        = { Katan and Ktantan —A Family of Small and Efficient Hardware-Oriented Block Ciphers },
+	year         = {2009},
+	address      = {Lausanne, Switzerland},
+	month        = {9},
+	organization = { Cryptographic Hardware and Embedded Systems (CHES) },
+	hyphenation     = {english}
+}
+
+@CONFERENCE{src46,
+	author       = { D. Watanabe and K. Okamoto and T. Kaneko }, 
+	title        = { A Hardware-Oriented Light Weight Pseudo-Random Number Generator Enocoro-128v2 (in Japanese) },
+	year         = { 2010 },
+	organization = { The Symposium on Cryptography and Information Security, SCIS },
+	hyphenation     = {english}
+}
+
+@TECHREPORT{src47,
+	author       = { C. D. Canniere and B. Preneel },
+	title        = { TRIVIUM - a stream cipher construction inspired by block cipher design principles },
+	institution  = { eStream, ECRYPT Stream Cipher Project },
+	year         = { 2005 },
+	number       = { 2005/030 },
+	hyphenation     = {english}
+}
+
+@CONFERENCE{src48,
+	author       = { T. Good and M. Benaissa }, 
+	title        = { Hardware Results for selected Stream Cipher Candidates },
+	year         = {2007},
+	month        = { 2 },
+	organization = { State of the Art of Stream Ciphers (SASC) },
+	hyphenation     = {english}
+}
+
+@CONFERENCE{src49,
+	author       = { N. Mentens and J. Genoe and B. Preneel and I. Verbauwhede }, 
+	title        = { A Low-cost Implementation of Trivium },
+	year         = {2008},
+	organization = { State of the Art of Stream Ciphers (SASC) },
+	hyphenation     = {english}
+}
+
+@BOOK{src50,
+	author    = { И. М. Голдовский }, 
+	title     = { Банковские микропроцессорные карты },
+	publisher = { Альпина Паблишер },
+	year      = { 2010 },
+	address   = { Москва },
+	pagetotal = { 686 },
+	isbn      = { 9785961456462 },
+	hyphenation  = {russian}
+}
+
+@inproceedings{src51,
+	author = {Poschmann, Axel and Robshaw, Matthew and Vater, Frank and Paar, Christof},
+	year = {2009},
+	month = {01},
+	pages = {129-145},
+	title = {Lightweight Cryptography and RFID: Tackling the Hidden Overheads},
+	volume = {5984},
+	doi = {10.1007/978-3-642-14423-3_10}
+}
+
+@inproceedings{src52,
+	author = {Bogdanov, Andrey and Leander, Gregor and Paar, Christof and Poschmann, Axel and Robshaw, Matt and Seurin, Yannick},
+	year = {2008},
+	month = {08},
+	pages = {283-299},
+	title = {Hash functions and RFID tags: Mind the gap},
+	volume = {5154},
+	doi = {10.1007/978-3-540-85053-3_18}
+}
+
+
+
+
+
+
 
 
 
